src/xmlpl-parser/output/xmlplParser.java
// $ANTLR 3.4 C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g 2012-03-05 22:29:38

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class xmlplParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "ID", "INT", "OCTAL_ESC", "STRING", "UNICODE_ESC", "WS", "'!='", "'$'", "'&#'", "'&'", "'('", "')'", "','", "'->'", "'-><'", "'->>'", "'.'", "'/'", "'/>'", "';'", "'<'", "'</'", "'<?'", "'='", "'=<'", "'=='", "'=>'", "'=?'", "'>'", "'?'", "'?>'", "'import'", "'module'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int CHAR=4;
    public static final int COMMENT=5;
    public static final int ESC_SEQ=6;
    public static final int EXPONENT=7;
    public static final int FLOAT=8;
    public static final int HEX_DIGIT=9;
    public static final int ID=10;
    public static final int INT=11;
    public static final int OCTAL_ESC=12;
    public static final int STRING=13;
    public static final int UNICODE_ESC=14;
    public static final int WS=15;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "referenceOrBinding", "xmlCharNumber", "xmlContent", 
    "importDef", "xmlStartTag", "statementList", "matchOperation", "xmlAttribute", 
    "variableReference", "appendOperation", "value", "xmlAttributesOrPattern", 
    "moveBackOperation", "xmlAttributeValue", "argList", "prependOperation", 
    "xmlModifyingExpression", "xmlUnaryTag", "pattern", "path", "xmlWord", 
    "valueOf", "replaceOperation", "moveFrontOperation", "pathExpression", 
    "statement", "functionInvocation", "binding", "xmlDocument", "xmlFragment", 
    "functionDefinition", "xmlText", "xmlObject", "xmlEndTag", "moveOperation", 
    "moduleDef", "module", "xmlCharName", "expression", "xmlPattern", "deleteOperation"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public xmlplParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public xmlplParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public xmlplParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return xmlplParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g"; }



    // $ANTLR start "moduleDef"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:60:1: moduleDef : 'module' ID '.' ;
    public final void moduleDef() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "moduleDef");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(60, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:61:2: ( 'module' ID '.' )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:61:4: 'module' ID '.'
            {
            dbg.location(61,4);
            match(input,42,FOLLOW_42_in_moduleDef559); 
            dbg.location(61,13);
            match(input,ID,FOLLOW_ID_in_moduleDef561); 
            dbg.location(61,16);
            match(input,26,FOLLOW_26_in_moduleDef563); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(62, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "moduleDef");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "moduleDef"



    // $ANTLR start "importDef"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:64:1: importDef : 'import' ID '.' ;
    public final void importDef() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "importDef");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(64, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:64:11: ( 'import' ID '.' )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:64:13: 'import' ID '.'
            {
            dbg.location(64,13);
            match(input,41,FOLLOW_41_in_importDef573); 
            dbg.location(64,22);
            match(input,ID,FOLLOW_ID_in_importDef575); 
            dbg.location(64,25);
            match(input,26,FOLLOW_26_in_importDef577); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(65, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "importDef");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "importDef"



    // $ANTLR start "functionDefinition"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:67:1: functionDefinition : ID '(' argList ')' '{' statementList '}' ;
    public final void functionDefinition() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "functionDefinition");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(67, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:68:2: ( ID '(' argList ')' '{' statementList '}' )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:68:4: ID '(' argList ')' '{' statementList '}'
            {
            dbg.location(68,4);
            match(input,ID,FOLLOW_ID_in_functionDefinition588); 
            dbg.location(68,7);
            match(input,20,FOLLOW_20_in_functionDefinition590); 
            dbg.location(68,11);
            pushFollow(FOLLOW_argList_in_functionDefinition592);
            argList();

            state._fsp--;

            dbg.location(68,19);
            match(input,21,FOLLOW_21_in_functionDefinition594); 
            dbg.location(68,23);
            match(input,43,FOLLOW_43_in_functionDefinition596); 
            dbg.location(69,2);
            pushFollow(FOLLOW_statementList_in_functionDefinition599);
            statementList();

            state._fsp--;

            dbg.location(70,2);
            match(input,44,FOLLOW_44_in_functionDefinition602); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(71, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "functionDefinition");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "functionDefinition"



    // $ANTLR start "statementList"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:73:1: statementList : ( statement )* ;
    public final void statementList() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statementList");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(73, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:74:2: ( ( statement )* )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:74:4: ( statement )*
            {
            dbg.location(74,4);
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:74:4: ( statement )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==17||LA1_0==30||LA1_0==32||LA1_0==39) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:74:5: statement
            	    {
            	    dbg.location(74,5);
            	    pushFollow(FOLLOW_statement_in_statementList614);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(75, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statementList");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "statementList"



    // $ANTLR start "statement"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:77:1: statement : ( ID ( '=' expression )? | expression ) ';' ;
    public final void statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(77, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:78:2: ( ( ID ( '=' expression )? | expression ) ';' )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:78:4: ( ID ( '=' expression )? | expression ) ';'
            {
            dbg.location(78,4);
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:78:4: ( ID ( '=' expression )? | expression )
            int alt3=2;
            try { dbg.enterSubRule(3);
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==20) ) {
                    alt3=2;
                }
                else if ( (LA3_1==29||LA3_1==33) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else if ( (LA3_0==17||LA3_0==30||LA3_0==32||LA3_0==39) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:78:6: ID ( '=' expression )?
                    {
                    dbg.location(78,6);
                    match(input,ID,FOLLOW_ID_in_statement629); 
                    dbg.location(78,9);
                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:78:9: ( '=' expression )?
                    int alt2=2;
                    try { dbg.enterSubRule(2);
                    try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==33) ) {
                        alt2=1;
                    }
                    } finally {dbg.exitDecision(2);}

                    switch (alt2) {
                        case 1 :
                            dbg.enterAlt(1);

                            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:78:10: '=' expression
                            {
                            dbg.location(78,10);
                            match(input,33,FOLLOW_33_in_statement632); 
                            dbg.location(78,14);
                            pushFollow(FOLLOW_expression_in_statement634);
                            expression();

                            state._fsp--;


                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(2);}


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:79:5: expression
                    {
                    dbg.location(79,5);
                    pushFollow(FOLLOW_expression_in_statement643);
                    expression();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(3);}

            dbg.location(79,17);
            match(input,29,FOLLOW_29_in_statement646); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(80, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "expression"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:81:1: expression : ( xmlModifyingExpression | xmlPattern | xmlFragment | functionInvocation | xmlDocument );
    public final void expression() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "expression");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(81, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:82:2: ( xmlModifyingExpression | xmlPattern | xmlFragment | functionInvocation | xmlDocument )
            int alt4=5;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            switch ( input.LA(1) ) {
            case 17:
                {
                alt4=1;
                }
                break;
            case 39:
                {
                alt4=2;
                }
                break;
            case 30:
                {
                alt4=3;
                }
                break;
            case ID:
                {
                alt4=4;
                }
                break;
            case 32:
                {
                alt4=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:82:4: xmlModifyingExpression
                    {
                    dbg.location(82,4);
                    pushFollow(FOLLOW_xmlModifyingExpression_in_expression656);
                    xmlModifyingExpression();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:83:4: xmlPattern
                    {
                    dbg.location(83,4);
                    pushFollow(FOLLOW_xmlPattern_in_expression661);
                    xmlPattern();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:84:4: xmlFragment
                    {
                    dbg.location(84,4);
                    pushFollow(FOLLOW_xmlFragment_in_expression694);
                    xmlFragment();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:85:4: functionInvocation
                    {
                    dbg.location(85,4);
                    pushFollow(FOLLOW_functionInvocation_in_expression699);
                    functionInvocation();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:86:4: xmlDocument
                    {
                    dbg.location(86,4);
                    pushFollow(FOLLOW_xmlDocument_in_expression704);
                    xmlDocument();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(87, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "expression");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "expression"



    // $ANTLR start "functionInvocation"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:89:1: functionInvocation : ID '(' argList ')' ;
    public final void functionInvocation() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "functionInvocation");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(89, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:89:20: ( ID '(' argList ')' )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:90:5: ID '(' argList ')'
            {
            dbg.location(90,5);
            match(input,ID,FOLLOW_ID_in_functionInvocation719); 
            dbg.location(90,8);
            match(input,20,FOLLOW_20_in_functionInvocation721); 
            dbg.location(90,12);
            pushFollow(FOLLOW_argList_in_functionInvocation723);
            argList();

            state._fsp--;

            dbg.location(90,20);
            match(input,21,FOLLOW_21_in_functionInvocation725); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(91, 4);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "functionInvocation");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "functionInvocation"



    // $ANTLR start "referenceOrBinding"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:93:1: referenceOrBinding : ID ( '=' expression )? ;
    public final void referenceOrBinding() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "referenceOrBinding");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(93, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:94:2: ( ID ( '=' expression )? )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:95:5: ID ( '=' expression )?
            {
            dbg.location(95,5);
            match(input,ID,FOLLOW_ID_in_referenceOrBinding746); 
            dbg.location(95,8);
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:95:8: ( '=' expression )?
            int alt5=2;
            try { dbg.enterSubRule(5);
            try { dbg.enterDecision(5, decisionCanBacktrack[5]);

            int LA5_0 = input.LA(1);

            if ( (LA5_0==33) ) {
                alt5=1;
            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:95:9: '=' expression
                    {
                    dbg.location(95,9);
                    match(input,33,FOLLOW_33_in_referenceOrBinding749); 
                    dbg.location(95,13);
                    pushFollow(FOLLOW_expression_in_referenceOrBinding751);
                    expression();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(5);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(96, 4);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "referenceOrBinding");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "referenceOrBinding"



    // $ANTLR start "xmlModifyingExpression"
    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:98:1: xmlModifyingExpression : pathExpression ( replaceOperation | appendOperation | prependOperation | matchOperation | moveOperation | moveFrontOperation | moveBackOperation | deleteOperation ) ;
    public final void xmlModifyingExpression() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "xmlModifyingExpression");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(98, 0);

        try {
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:99:2: ( pathExpression ( replaceOperation | appendOperation | prependOperation | matchOperation | moveOperation | moveFrontOperation | moveBackOperation | deleteOperation ) )
            dbg.enterAlt(1);

            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:99:4: pathExpression ( replaceOperation | appendOperation | prependOperation | matchOperation | moveOperation | moveFrontOperation | moveBackOperation | deleteOperation )
            {
            dbg.location(99,4);
            pushFollow(FOLLOW_pathExpression_in_xmlModifyingExpression771);
            pathExpression();

            state._fsp--;

            dbg.location(100,2);
            // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:100:2: ( replaceOperation | appendOperation | prependOperation | matchOperation | moveOperation | moveFrontOperation | moveBackOperation | deleteOperation )
            int alt6=8;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            switch ( input.LA(1) ) {
            case 35:
                {
                alt6=1;
                }
                break;
            case 36:
                {
                alt6=2;
                }
                break;
            case 34:
                {
                alt6=3;
                }
                break;
            case 37:
                {
                alt6=4;
                }
                break;
            case 23:
                {
                alt6=5;
                }
                break;
            case 24:
                {
                alt6=6;
                }
                break;
            case 25:
                {
                alt6=7;
                }
                break;
            case 16:
                {
                alt6=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:101:5: replaceOperation
                    {
                    dbg.location(101,5);
                    pushFollow(FOLLOW_replaceOperation_in_xmlModifyingExpression781);
                    replaceOperation();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:102:5: appendOperation
                    {
                    dbg.location(102,5);
                    pushFollow(FOLLOW_appendOperation_in_xmlModifyingExpression787);
                    appendOperation();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:103:5: prependOperation
                    {
                    dbg.location(103,5);
                    pushFollow(FOLLOW_prependOperation_in_xmlModifyingExpression793);
                    prependOperation();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:104:5: matchOperation
                    {
                    dbg.location(104,5);
                    pushFollow(FOLLOW_matchOperation_in_xmlModifyingExpression799);
                    matchOperation();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:105:5: moveOperation
                    {
                    dbg.location(105,5);
                    pushFollow(FOLLOW_moveOperation_in_xmlModifyingExpression805);
                    moveOperation();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    dbg.enterAlt(6);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:106:5: moveFrontOperation
                    {
                    dbg.location(106,5);
                    pushFollow(FOLLOW_moveFrontOperation_in_xmlModifyingExpression811);
                    moveFrontOperation();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    dbg.enterAlt(7);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:107:5: moveBackOperation
                    {
                    dbg.location(107,5);
                    pushFollow(FOLLOW_moveBackOperation_in_xmlModifyingExpression817);
                    moveBackOperation();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    dbg.enterAlt(8);

                    // C:\\Users\\aabs\\dev\\xmlpl\\src\\xmlpl-parser\\xmlpl.g:108:5: deleteOperation
                    {
                    dbg.location(108,5);
                    pushFollow(FOLLOW_deleteOperation_in_xmlModifyingExpression823);
                    deleteOperation();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(110, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "xmlModifyingExpression");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "xmlModifyingExpression"


